# app.js
@@ -4,6 +4,7 @@ const { router, app } = require('./routes/shipping')
 const swaggerJSDoc =  require('swagger-jsdoc')
 const swaggerUI = require('swagger-ui-express')
 const ordersRoutes = require('./routes/orders')
+const ratesRoutes = require('./routes/rates')
 const swaggerJson = require('./swagger.json')
 
 
@@ -19,6 +20,7 @@ const swaggerDocs = swaggerJSDoc(swaggerOptions);
 app.use(bodyParser.json());
 app.use('/shipping', router)
 app.use('/payments', ordersRoutes)
+app.use('/rates', ratesRoutes)
 app.use('/api-docs',swaggerUI.serve,swaggerUI.setup(swaggerDocs));  
 
 
