# routes/shipping.js
@@ -12,28 +12,6 @@ const BASE_URL = process.env.BASE_URL
 const BASE_URL_V1 = process.env.BASE_URL
 const AUTH_KEY = process.env.AUTH_KEY
 
-/*
-Retrieve shipments rate from easyship.com
-*/
-router.post('/quotes', async function (req, res) {
-    data = req.body
-    axios.post(`${BASE_URL}/rates`, data=data, {
-        headers: {
-            "Authorization": AUTH_KEY
-        }
-    }).then(result => {
-        res
-            .status(200)
-            .json(result.data)
-    }).catch(err=>{
-        res
-            .status(err.response.status)
-            .json({
-                errorMessage:err.response.statusText,
-                errors: err.response.data.errors
-            })
-    })
-})
 
 /*Create Shipment (Shipment is unpaid order)
 it saved the shipment data to firestore
